css/hud.css
.conversation-background.visible {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background-color: rgba(0, 0, 0, 0.5);
  backdrop-filter: blur(2px);
}

.conversation-hud-wrapper {
  display: flex;
  flex-flow: column;
  pointer-events: none;
}
.conversation-hud-wrapper.visible {
  z-index: 10;
}
.conversation-hud-wrapper.minimized {
  height: 100%;
}

.conversation-hud-content {
  margin: auto;

  display: flex;
  flex-flow: row;
  justify-content: center;
  align-items: center;

  pointer-events: all;
}
.conversation-hud-wrapper.visible .conversation-hud-content {
  display: flex;
}
.conversation-hud-wrapper.minimized .conversation-hud-content {
  flex-direction: column;
  justify-content: space-between;
  margin-right: 10px;
  height: 100%;
  max-height: calc(100vh - 54px - 62px);
}

.conversation-hud-active-participant {
  display: none;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  position: relative;
  height: 65vh;
  max-height: 650px;
  width: 30vw;
  max-width: 420px;
}
.conversation-hud-wrapper.visible .conversation-hud-active-participant {
  display: flex;
}

.conversation-hud-wrapper.minimized .conversation-hud-active-participant {
  height: 152px;
  width: 152px;
  flex: 0 0 auto;
  background: rgba(0, 0, 0, 0.5);
  border: 1px solid var(--color-border-dark);
  border-radius: 15px;
  box-shadow: 0 0 10px var(--color-shadow-dark);
}

.conversation-hud-wrapper.minimized .conversation-hud-active-participant img {
  border: 0;
}

.conversation-hud-active-participant img {
  height: 100%;
  width: 100%;
  object-fit: cover;
  object-position: top center;
  border-radius: 15px;
  box-shadow: 0 0 10px var(--color-shadow-dark);
}
.conversation-hud-wrapper.minimized .conversation-hud-active-participant img {
  box-shadow: unset;
}

.active-participant-image {
  display: none;
  background-color: rgba(0, 0, 0, 0.5);
}
.active-participant-image.active {
  display: block;
}

.active-participant-name {
  display: none;
  position: absolute;

  bottom: 0;
  left: 0;
  right: 0;

  margin: 0;
  padding-top: 5px;
  padding-bottom: 5px;
  padding-left: 5px;
  padding-right: 5px;

  overflow: hidden;
  white-space: nowrap;

  font-size: 16px;
  text-align: center;
  color: var(--color-text-light-highlight);
  text-overflow: ellipsis;

  background-color: rgba(0, 0, 0, 0.65);
  border-top: 1px solid var(--color-border-dark);
  border-radius: 0px 0px 15px 15px;
}
.active-participant-name.active {
  display: block;
}

.conversation-hud-participant-list {
  display: none;
  flex-flow: column;
  justify-content: center;
  align-items: center;
  margin-left: 50px;

  height: 65vh;
  max-height: 650px;
  overflow-y: auto;
  padding: 0px 10px;
}
.conversation-hud-wrapper.visible .conversation-hud-participant-list {
  display: flex;
}
.conversation-hud-wrapper.minimized .conversation-hud-participant-list {
  margin-top: 25px;
}
@media only screen and (max-width: 1150px) {
  .conversation-hud-participant-list {
    margin-left: 20px;
  }
}

.conversation-participant {
  display: flex;
  flex-flow: column;
  position: relative;
  margin-top: 10px;
  margin-bottom: 10px;
  background: rgba(0, 0, 0, 0.5);

  min-width: 102px;
  min-height: 102px;
  max-width: 102px;
  max-height: 102px;

  border: 1px solid var(--color-border-dark);
  border-radius: 5px;
  overflow: hidden;

  box-shadow: 0 0 10px var(--color-shadow-dark);
}
.conversation-participant.has-control:hover {
  border: 1px solid var(--color-border-highlight-alt);
  border-bottom: 1px solid var(--color-border-highlight);
  box-shadow: 0 0 10px var(--color-shadow-highlight);
}
.conversation-participant.active {
  border: 1px solid var(--color-border-highlight-alt);
  border-bottom: 1px solid var(--color-border-highlight);
  box-shadow: 0 0 10px var(--color-shadow-highlight);
}

.conversation-participant-gm-wrapper {
  width: 100px;
  height: 100px;
}

.conversation-participant img {
  width: 100px;
  height: 100px;
  object-fit: cover;
  object-position: top center;

  border: none;
  border-radius: 0;
}

.conversation-participant-edit,
.conversation-participant-remove {
  position: absolute;
  padding: 4px;

  width: 21px;
  height: 21px;

  display: flex;
  flex-flow: column;
  justify-content: center;
  align-items: center;

  color: var(--color-text-light-heading);
  font-size: 12px;

  background-color: rgba(0, 0, 0, 0.65);
  border-bottom: 1px solid var(--color-border-dark);
}
.conversation-participant-edit {
  border-right: 1px solid var(--color-border-dark);
  top: 0;
  left: 0;
  border-radius: 0px 0px 5px 0px;
}
.conversation-participant-remove {
  border-left: 1px solid var(--color-border-dark);
  top: 0;
  right: 0;
  border-radius: 0px 0px 0px 5px;
}

.conversation-participant > i {
  width: 100px;
  height: 100px;

  color: var(--color-text-light-highlight);
  display: flex;
  flex-flow: column;
  align-items: center;
  justify-content: center;
  font-size: 30px;
}

.conversation-participant p {
  position: absolute;

  bottom: 0;
  left: 0;
  right: 0;

  margin: 0;
  padding-top: 3px;
  padding-bottom: 3px;
  padding-left: 5px;
  padding-right: 5px;

  overflow: hidden;
  white-space: nowrap;

  font-size: 12px;
  text-align: center;
  color: var(--color-text-light-highlight);
  text-overflow: ellipsis;

  background-color: rgba(0, 0, 0, 0.65);
  border-top: 1px solid var(--color-border-dark);
}

.no-active-participant-text {
  display: none;
  max-width: 200px;
  margin: 0;
  text-align: center;
  color: var(--color-text-light-highlight);
  font-size: 30px;
}
.no-active-participant-text.active {
  display: block;
}

.conversation-hud-wrapper.minimized .no-active-participant-text.active {
  font-size: 26px;
}

#ui-conversation-controls {
  display: flex;
  flex-flow: column;
  justify-content: center;
  z-index: 20;
}

.conversation-controls-minimize-button,
.conversation-controls-save-button {
  display: flex;
  flex-flow: column;
  justify-content: center;
  align-items: center;

  width: 32px;
  height: 32px;
  margin-top: 4px;
  margin-bottom: 4px;
  padding: 4px;

  background: rgba(0, 0, 0, 0.5);
  box-shadow: 0 0 10px var(--color-shadow-dark);
  color: var(--color-text-light-heading);
  text-align: center;

  border: 1px solid var(--color-border-dark);
  border-radius: 5px;
}
.conversation-controls-minimize-button:hover,
.conversation-controls-save-button:hover {
  color: var(--color-text-light-highlight);
  border: 1px solid var(--color-border-highlight-alt);
  border-bottom: 1px solid var(--color-border-highlight);
  box-shadow: 0 0 10px var(--color-shadow-highlight);
}

